--- a/yumecan.html
+++ b/yumecan.html
@@ -5097,11 +5097,31 @@ function updateCombatUI(deck, originalBonusDeck, monster) {
         const currentHp = card.stats.hp;
         const hpPercent = maxHp > 0 ? (currentHp / maxHp) * 100 : 0;
         
-        // HP 바 업데이트
-        const hpBarEl = document.getElementById(`player-hp-bar-${index}`);
-        const hpTextEl = document.getElementById(`player-hp-text-${index}`);
-        if (hpBarEl) hpBarEl.style.width = `${hpPercent}%`;
-        if (hpTextEl) hpTextEl.textContent = `${currentHp} / ${maxHp}`;
+        // 2. 몬스터 HP 업데이트 (수정된 섹션)
+    // startCombat에서 저장해둔 maxHp를 우선적으로 사용합니다.
+    let monsterMaxHp = monster.maxHp; 
+
+    // 만약 monster.maxHp가 없다면(예: 레이드나 예외 상황) 기존 로직으로 보강
+    if (!monsterMaxHp) {
+        if (typeof raidBossDataSheet !== 'undefined' && monster.name === raidBossDataSheet.name) {
+            monsterMaxHp = raidBossDataSheet.maxHp;
+        } else {
+            // 이 부분은 key와 name이 다를 때 에러가 날 수 있으므로 
+            // 현재 체력보다 최대 체력이 낮게 잡히지 않도록 안전장치를 둡니다.
+            monsterMaxHp = monsters[monster.name]?.stats.hp || monster.stats.hp; 
+        }
+    }
+
+    if (monsterMaxHp) {
+        const monsterHpPercent = (monster.stats.hp / monsterMaxHp) * 100;
+        const monsterHpBar = document.getElementById('monster-hp-bar');
+        const monsterHpText = document.getElementById('monster-hp-text');
+
+        if (monsterHpBar) monsterHpBar.style.width = `${monsterHpPercent}%`;
+        // 텍스트는 "현재 HP / 최대 HP" 형식으로 표시
+        if (monsterHpText) monsterHpText.textContent = `${monster.stats.hp} / ${monsterMaxHp}`;
+    }
+}
 
         // ✨ [신규] 플레이어 상태 아이콘 렌더링
         const iconContainer = document.getElementById(`effect-icons-${index}`);
