--- a/yumecan.html
+++ b/yumecan.html
@@ -3496,7 +3496,7 @@ function displayMyRoom() {
 
     if (!playerRoom.furniture) playerRoom.furniture = [];
 
-    // (1) 가구 렌더링 (기존과 동일)
+    // (1) 가구 렌더링
     playerRoom.furniture.forEach((item, index) => {
         const furnitureData = furnitureItems.find(f => f.id === item.id);
         if (furnitureData) {
@@ -3513,16 +3513,27 @@ function displayMyRoom() {
             const flipTransform = item.isFlipped ? 'scaleX(-1)' : 'scaleX(1)';
             let zOffset = 0;
 
-            if (furnitureData.type === 'rug') {
+            // ✨ 레이어 우선순위 설정
+            if (furnitureData.type === 'rug' || furnitureData.type === 'floor') {
+                // 바닥재는 가장 밑에 깔리도록 설정
                 el.style.transform = `translate(-50%, -50%) rotate(45deg) scaleY(0.58) ${flipTransform}`;
                 el.style.width = `${furnitureData.size.w * 7}%`; 
                 el.style.opacity = '0.95';
-                zOffset = -100; 
+                zOffset = -100; // 가장 뒤쪽
             } else if (furnitureData.type === 'wall') {
                 el.style.transform = `translate(-50%, -200%) ${flipTransform}`;
                 el.style.width = `${furnitureData.size.w * 10}%`; 
-                zOffset = -50; 
+                zOffset = -50; // 바닥재보다는 앞, 가구보다는 뒤
+            } else if (furnitureData.type === 'prop') {
+                // ✨ [핵심 추가] '소품' 타입은 일반 가구보다도 살짝 앞에 오도록 설정
+                el.style.transform = `translate(-50%, -95%) ${flipTransform}`;
+                let baseWidth = 12; 
+                if (furnitureData.scale) baseWidth = baseWidth * furnitureData.scale;
+                el.style.width = `${baseWidth}%`;
+                el.style.filter = 'drop-shadow(0px 3px 3px rgba(0,0,0,0.4))'; // 소품 전용 그림자
+                zOffset = 10; // 일반 가구(0)보다 앞에 배치
             } else {
+                // 일반 가구
                 el.style.transform = `translate(-50%, -95%) ${flipTransform}`;
                 let baseWidth = 12; 
                 if (furnitureData.scale) baseWidth = baseWidth * furnitureData.scale;
@@ -3530,6 +3541,8 @@ function displayMyRoom() {
                 el.style.filter = 'drop-shadow(0px 5px 5px rgba(0,0,0,0.5))'; 
                 zOffset = 0; 
             }
+
+            // 최종 zIndex 적용 (y좌표 기반 zIndex + 보정치)
             el.style.zIndex = iso.zIndex + zOffset; 
             roomLayer.appendChild(el);
         }
