--- a/yumecan.html
+++ b/yumecan.html
@@ -3496,7 +3496,7 @@ function displayMyRoom() {
 
     if (!playerRoom.furniture) playerRoom.furniture = [];
 
-    // (1) 가구 렌더링
+    // (1) 가구 렌더링 (기존과 동일)
     playerRoom.furniture.forEach((item, index) => {
         const furnitureData = furnitureItems.find(f => f.id === item.id);
         if (furnitureData) {
@@ -3513,29 +3513,24 @@ function displayMyRoom() {
             const flipTransform = item.isFlipped ? 'scaleX(-1)' : 'scaleX(1)';
             let zOffset = 0;
 
-            // --- 타입별 레이어 및 스타일 설정 ---
-            if (furnitureData.type === 'rug' || furnitureData.type === 'floor') {
-                // [바닥/카페트] 가장 뒤에 배치
+            if (furnitureData.type === 'rug') {
                 el.style.transform = `translate(-50%, -50%) rotate(45deg) scaleY(0.58) ${flipTransform}`;
                 el.style.width = `${furnitureData.size.w * 7}%`; 
                 el.style.opacity = '0.95';
                 zOffset = -100; 
             } else if (furnitureData.type === 'wall') {
-                // [벽 가구] 바닥보다는 위, 일반 가구보다는 뒤
                 el.style.transform = `translate(-50%, -200%) ${flipTransform}`;
                 el.style.width = `${furnitureData.size.w * 10}%`; 
                 zOffset = -50; 
-            } else if (furnitureData.type === 'prop') {
+			} else if (furnitureData.type === 'prop') {
                 // ✨ [소품 추가] 일반 가구보다 살짝 앞에 배치 (zOffset 사용)
                 el.style.transform = `translate(-50%, -95%) ${flipTransform}`;
                 let baseWidth = 12; 
                 if (furnitureData.scale) baseWidth = baseWidth * furnitureData.scale;
                 el.style.width = `${baseWidth}%`; 
-                // 소품은 조금 더 가벼운 그림자를 적용하여 밀착된 느낌을 줍니다.
                 el.style.filter = 'drop-shadow(0px 2px 3px rgba(0,0,0,0.4))'; 
                 zOffset = 10; // 일반 가구(0)보다 10만큼 더 앞으로 나옴
             } else {
-                // [일반 가구] 기본 레이어
                 el.style.transform = `translate(-50%, -95%) ${flipTransform}`;
                 let baseWidth = 12; 
                 if (furnitureData.scale) baseWidth = baseWidth * furnitureData.scale;
@@ -3543,14 +3538,10 @@ function displayMyRoom() {
                 el.style.filter = 'drop-shadow(0px 5px 5px rgba(0,0,0,0.5))'; 
                 zOffset = 0; 
             }
-
-            // 최종 zIndex 적용
             el.style.zIndex = iso.zIndex + zOffset; 
             roomLayer.appendChild(el);
         }
     });
-
-    
 
     // (2) 캐릭터 렌더링
     let activeCharacters = [];
