--- a/yumecan.html
+++ b/yumecan.html
@@ -3611,7 +3611,7 @@ function displayMyRoom() {
         el.style.left = `${iso.left}%`;
         el.style.top = `${iso.top}%`;
         el.style.transform = 'translate(-50%, -90%)'; 
-        el.style.width = `${TILE_WIDTH_PERCENT * 5}%`; 
+        el.style.width = `10%`;
         el.style.zIndex = iso.zIndex + 50;
 
         const img = document.createElement('img');
