--- a/yumecan.html
+++ b/yumecan.html
@@ -4260,6 +4260,7 @@ if (!document.getElementById('visit-mode-overlay').classList.contains('hidden'))
         saveGame();
         showMessage('배치가 저장되었습니다.', 'text-green-300', messageArea);
     }
+	displayMyRoom();
 }
 
 		
