--- a/yumecan.html
+++ b/yumecan.html
@@ -1187,7 +1187,7 @@ body.pointer-events-none {
     <div id="room-container">
         
         <div class="absolute inset-0 bg-center bg-no-repeat" 
-     style="background-image: url('https://i.imgur.com/aOL46H8.png');">
+     style="background-image: url('https://i.imgur.com/IHviAXY.png');">
 </div>
         
         <div class="iso-floor"></div>
