--- a/yumecan.html
+++ b/yumecan.html
@@ -4049,42 +4049,28 @@ function initDragEvents() {
             playerRoom.furniture[uniqueKey].y = gridPos.y;
         }
 
-       const newIso = getIsoPos(gridPos.x, gridPos.y);
-const furnitureData = furnitureItems.find(f => f.id === playerRoom.furniture[uniqueKey].id);
+        const newIso = getIsoPos(gridPos.x, gridPos.y);
 
-let zOffset = 0;
-if (furnitureData.type === 'floor' || furnitureData.type === 'rug') zOffset = -20000;
-else if (furnitureData.type === 'wall') zOffset = -10000;
-else if (furnitureData.type === 'prop') zOffset = 10;
-else zOffset = 0;
+        // ✨ 1. 가구 데이터 가져오기 (중복 선언 주의!)
+        const furnitureData = furnitureItems.find(f => f.id === playerRoom.furniture[uniqueKey].id);
 
-draggedFurniture.style.zIndex = newIso.zIndex + zOffset;
+        // ✨ 2. 레이어 오프셋 계산 (여기서 let zOffset은 딱 한 번만 나와야 합니다)
+        let zOffset = 0;
+        if (furnitureData.type === 'floor' || furnitureData.type === 'rug') {
+            zOffset = -20000; 
+        } else if (furnitureData.type === 'wall') {
+            zOffset = -10000; 
+        } else if (furnitureData.type === 'prop') {
+            zOffset = 10;     
+        } else {
+            zOffset = 0;      
+        }
 
-// 가구 데이터 가져오기	
-
-// ✨ [수정] 레이어 오프셋 최소화
-let zOffset = 0;
-if (furnitureData.type === 'floor') {
-    zOffset = -2; // 가장 밑바닥
-} else if (furnitureData.type === 'rug') {
-    zOffset = -1; // 바닥 위, 가구 아래
-} else if (furnitureData.type === 'wall') {
-    zOffset = -10; // 벽은 모든 가구보다 뒤에 있어야 함
-} else if (furnitureData.type === 'prop') {
-    zOffset = 1;  // 가구 위에 올라가는 소품
-} else {
-    zOffset = 0;  // 일반 가구 (캐릭터와 동일 선상)
-}
-
-// 적용
-container.style.zIndex = Math.floor(iso.zIndex + zOffset);
-
-// 최종 zIndex 적용 (미세한 오프셋만 더함)
-draggedFurniture.style.zIndex = newIso.zIndex + zOffset;
-
-draggedFurniture.style.transition = '';
-draggedFurniture.style.left = `${newIso.left}%`;
-draggedFurniture.style.top = `${newIso.top}%`;
+        // ✨ 3. 최종 zIndex 및 위치 적용
+        draggedFurniture.style.zIndex = Math.floor(newIso.zIndex * 100) + zOffset;
+        draggedFurniture.style.transition = '';
+        draggedFurniture.style.left = `${newIso.left}%`;
+        draggedFurniture.style.top = `${newIso.top}%`;
         draggedFurniture = null;
     };
 
