--- a/yumecan.html
+++ b/yumecan.html
@@ -316,7 +316,7 @@ body.pointer-events-none {
     position: absolute;
     width: 60px;
     height: 60px;
-    transition: all 2s linear; /* 부드러운 이동 */
+    transition: left 2s linear, top 2s linear; /* 부드러운 이동 */
     
     cursor: pointer;
 }
@@ -3526,7 +3526,7 @@ else if (furnitureData.type === 'wall') zOffset = -5000;
 else if (furnitureData.type === 'prop') zOffset = 10; // 캐릭터(+5)보다 소품이 더 앞에 오게 하려면 10
 else zOffset = 0; // 일반 가구
 
-container.style.zIndex = iso.zIndex + zOffset;
+el.style.zIndex = iso.zIndex + 5;
 
 
 
@@ -3961,11 +3961,11 @@ const isBlocked = playerRoom.furniture.some(f => {
     const parentHeight = element.parentElement.offsetHeight; 
     const currentTopPercent = (currentTopPx / parentHeight) * 100;
 
-    // ✨ 중요: 가구 배치 공식(screenY = 45 + (gridX + gridY) * 0.24)을 역산합니다.
     const gridSum = (currentTopPercent - 45) / 0.24;
     
-    // 가구와 같은 단위를 사용하고, 캐릭터가 가구와 같은 줄에 있을 때 살짝 앞에 보이게 +5만 더합니다.
-    element.style.zIndex = Math.floor(gridSum * 100);
+    // ✨ 캐릭터는 가구와 같은 '깊이'에 있을 때 살짝 앞에 보이도록 +5 보정치를 줍니다.
+    // CSS transition이 빠졌으므로 이 값이 즉시 반영되어 자연스럽게 가구 뒤로 숨게 됩니다.
+    element.style.zIndex = Math.floor(gridSum * 100) + 5;
 
     if (elapsed < duration) {
         requestAnimationFrame(updateZIndexRealtime);
