--- a/yumecan.html
+++ b/yumecan.html
@@ -3696,30 +3696,30 @@ container.style.zIndex = Math.floor(iso.zIndex + zOffset);
 
 // ✨ 마우스를 움직일 때 (가구가 따라옴)
 window.addEventListener('mousemove', (e) => {
+    // 1. 드래그 중이 아니거나 배치 모드가 아니면 중단
     if (!isEditMode || !draggedFurniture) return;
 
     const roomLayer = document.getElementById('room-layer');
     const rect = roomLayer.getBoundingClientRect();
     
-    // 1. 마우스의 현재 화면상 % 위치 계산
-    const rawX = ((e.clientX - rect.left) / rect.width) * 100;
-    const rawY = ((e.clientY - rect.top) / rect.height) * 100;
+    // 2. 마우스의 현재 위치를 %로 계산
+    const mouseXPercent = ((e.clientX - rect.left) / rect.width) * 100;
+    const mouseYPercent = ((e.clientY - rect.top) / rect.height) * 100;
 
-    // 2. 화면 위치를 그리드 좌표(x, y)로 역계산
-    let gridPos = getGridPosFromScreen(rawX, rawY);
+    // 3. 화면 위치를 그리드 좌표(x, y)로 변환 (역계산)
+    let gridPos = getGridPosFromScreen(mouseXPercent, mouseYPercent);
 
-    // 3. ✨ [핵심] 그리드 좌표를 0~100 사이로 제한 (방 밖으로 못 나가게 함)
+    // 4. ⭐ [핵심] 그리드 좌표를 0~100 사이로 강제 고정 (Clamp)
+    // 이 코드가 가구를 방 안으로 가둡니다.
     gridPos.x = Math.max(0, Math.min(100, gridPos.x));
     gridPos.y = Math.max(0, Math.min(100, gridPos.y));
 
-    // 4. 제한된 그리드 좌표를 다시 화면 % 위치로 변환
+    // 5. 고정된 그리드 좌표를 다시 화면 % 위치로 변환 (정계산)
     const finalIso = getIsoPos(gridPos.x, gridPos.y);
 
-    // 5. 실제 가구 위치 업데이트
+    // 6. 실제 가구 위치 및 레이어 업데이트
     draggedFurniture.style.left = `${finalIso.left}%`;
     draggedFurniture.style.top = `${finalIso.top}%`;
-
-    // 실시간 레이어(zIndex) 계산 (가구끼리 겹침 방지)
     draggedFurniture.style.zIndex = Math.floor(finalIso.zIndex);
 });
 
@@ -4405,18 +4405,15 @@ function syncFurnitureData() {
     });
 }
 
-function getGridPosFromScreen(leftPercent, topPercent) {
-    // getIsoPos 공식의 역산입니다. (기준점 50%, 45% 및 계수 0.42, 0.24 사용 기준)
-    const relativeLeft = leftPercent - 50;
-    const relativeTop = topPercent - 45;
+// getIsoPos의 기준점(50, 45)과 계수(0.42, 0.24)를 사용함
+    const relX = leftPercent - 50;
+    const relY = topPercent - 45;
 
-    const x = (relativeTop / 0.24 + relativeLeft / 0.42) / 2;
-    const y = (relativeTop / 0.24 - relativeLeft / 0.42) / 2;
+    // 역행렬 계산식
+    const x = (relY / 0.24 + relX / 0.42) / 2;
+    const y = (relY / 0.24 - relX / 0.42) / 2;
 
-    return {
-        x: Math.max(0, Math.min(100, x)), // 0~100 사이로 제한
-        y: Math.max(0, Math.min(100, y))
-    };
+    return { x, y };
 }
 
 		
